@@ -39,6 +39,7 @@ In alphabetical order (by last name)
 ** Initial code for 'switch between source and spec file' command in Spec::Mate (Patch [#10791])
 * Sinclair Bain
 ** Patch [#11101] StringHelpers.starts_with?(prefix) assumes a string parameter for _prefix_
+** Patch for bug [#10577] Rails with Oracle breaks 0.9.2
 * Ken Barker
 ** Patch [#10921] Allow verify_rcov to accept greater than threshold coverage %'s via configuration
 ** Patch [#10920] Added support for not implemented examples
