@@ -29,6 +29,7 @@
     
     <div id="footer">
       Webdesign by <a href="http://www.oswd.org/user/profile/id/9462">JM</a>
+      <SCRIPT type='text/javascript' language='JavaScript' src='http://www.ohloh.net/projects/6519;badge_js'></SCRIPT>
     </div>
   </div>
 </div>
