@@ -1,5 +1,5 @@
 ---
-title: Install
+title: Download
 orderInfo: 2
 ---
 
